--- a/CalismaCSS/css/style.css
+++ b/CalismaCSS/css/style.css
@@ -20,18 +20,17 @@ ol{
 div{
     text-align: center;
 }
-.contact{
+.contacts{
     font-size: 28px;
     font-family: arial;
     font-weight: bold;    
     background-color: mediumturquoise;
-
 }
-
 .first-article{
     background-color: moccasin;
     font-family: monospace;
 }
 #first-paragraph{
     color:magenta}
+
 
